--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,28 @@ header{
     color: #ffffff;
     text-decoration: none;
     margin: 10px;
+
+    position: relative;
+}
+
+.menu a::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    position: absolute;
+    opacity: 80%;
+
+    bottom: -2px;
+    left: 0px;
+
+    border-radius: 50px;
+    background-color: #f3ddb1;
+    transition: 0.5s ease-in-out;
+}
+
+.menu a:hover::after{
+    color: #f3ddb1;
+    width: 100%;
 }
 
 .menu a:hover{
@@ -57,7 +79,7 @@ header{
     background-color: #f3ddb1;
     color:  rgb(56, 56, 56);
 
-    transition: 0.6s;
+    transition: 0.5s;
 }
 
 /* Main > inicio */
@@ -272,17 +294,19 @@ header{
     }
 }
 
-.content-seta-perfils{
+.content-seta-profiles{
     display: flex;
     height: auto;
     justify-content: center;
     align-items: center;
     display: none;
+
+    background-color: #ffffff;
 }
 
-/* Perfils 1 */
+/* profiles 1 */
 
-.primeiros-perfils{
+.primeiros-profiles{
     display: flex;
     height: 350px;
     justify-content: center;
@@ -306,7 +330,7 @@ header{
     border-radius: 50px;
 }
 
-.primeiros-perfils .bloco{
+.primeiros-profiles .bloco{
     background-color: #f3ddb1;
     text-decoration: none;
     color: #111111;
@@ -318,7 +342,7 @@ header{
     border-radius: 15px 15px 0px 0px;
 }
 
-.primeiros-perfils .bloco div{
+.primeiros-profiles .bloco div{
     background-color: #faf7f7;
     margin-top: 200px;
     font-size: 8px;
@@ -333,35 +357,35 @@ header{
 }
 
 
-.primeiros-perfils .bloco:hover{
+.primeiros-profiles .bloco:hover{
     transform: translateY(-5px);
     transition: 0.6s;
 }
 
-.primeiros-perfils .bloco:nth-child(2){
+.primeiros-profiles .bloco:nth-child(2){
     order: 1;
 }
 
-.primeiros-perfils .bloco:nth-child(1){
+.primeiros-profiles .bloco:nth-child(1){
     order: 2;
     transform: translateY(-15px);
     transition: 0.6s;
 }
 
-.primeiros-perfils .bloco:nth-child(3){
+.primeiros-profiles .bloco:nth-child(3){
     order: 3;
 }
 
-/* Perfils 2 */
+/* profiles 2 */
 
-.segundos-perfils{
+.segundos-profiles{
     display: flex;
     height: 350px;
     justify-content: center;
     align-items: center;
 }
 
-.segundos-perfils .bloco{
+.segundos-profiles .bloco{
     background-color: #f3ddb1;
     text-decoration: none;
     color: #111111;
@@ -373,7 +397,7 @@ header{
     border-radius: 15px 15px 0px 0px;
 }
 
-.segundos-perfils .bloco div{
+.segundos-profiles .bloco div{
     background-color: #faf7f7;
     margin-top: 200px;
     font-size: 8px;
@@ -388,35 +412,35 @@ header{
 }
 
 
-.segundos-perfils .bloco:hover{
+.segundos-profiles .bloco:hover{
     transform: translateY(-5px);
     transition: 0.6s;
 }
 
-.segundos-perfils .bloco:nth-child(2){
+.segundos-profiles .bloco:nth-child(2){
     order: 1;
 }
 
-.segundos-perfils .bloco:nth-child(1){
+.segundos-profiles .bloco:nth-child(1){
     transform: translateY(-15px);
     transition: 0.6s;
     order: 2;
 }
 
-.segundos-perfils .bloco:nth-child(3){
+.segundos-profiles .bloco:nth-child(3){
     order: 3;
 }
 
-/* Perfils 3 */
+/* profiles 3 */
 
-.terceiros-perfils{
+.terceiros-profiles{
     display: flex;
     height: 350px;
     justify-content: center;
     align-items: center;
 }
 
-.terceiros-perfils .bloco{
+.terceiros-profiles .bloco{
     background-color: #f3ddb1;
     text-decoration: none;
     color: #111111;
@@ -428,7 +452,7 @@ header{
     border-radius: 15px 15px 0px 0px;
 }
 
-.terceiros-perfils .bloco div{
+.terceiros-profiles .bloco div{
     background-color: #faf7f7;
     margin-top: 200px;
     font-size: 8px;
@@ -443,30 +467,29 @@ header{
 }
 
 
-.terceiros-perfils .bloco:hover{
+.terceiros-profiles .bloco:hover{
     transform: translateY(-5px);
     transition: 0.6s;
 }
 
-.terceiros-perfils .bloco:nth-child(3){
+.terceiros-profiles .bloco:nth-child(3){
     order: 1;
 }
 
-.terceiros-perfils .bloco:nth-child(2){
+.terceiros-profiles .bloco:nth-child(2){
     order: 2;
 }
 
-.terceiros-perfils .bloco:nth-child(1){
+.terceiros-profiles .bloco:nth-child(1){
     order: 3;
     transform: translateY(-15px);
     transition: 0.6s;
 }
 
-.terceiros-perfils .bloco:nth-child(4){
+.terceiros-profiles .bloco:nth-child(4){
     order: 4;
 }
 
-.terceiros-perfils .bloco:nth-child(5){
+.terceiros-profiles .bloco:nth-child(5){
     order: 5;
 }
-
